[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/GameHUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GameScene.gd" type="Script" id=3]
[ext_resource path="res://scenes/PauseHandler.gd" type="Script" id=4]

[node name="GameScene" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = 300.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 400, 300 )

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="GameHUD" parent="HUDLayer" instance=ExtResource( 1 )]

[node name="RespawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="PauseHandler" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 4 )
